--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "react-scripts": "1.0.10"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
